examples/web-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web-demo
  namespace: demo
spec:
  type: ClusterIP # Internal cluster access only
  selector:
    component: web-demo-local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
